# ai-pokedex-frontend

./: .gitignore  README.md  pyproject.toml
config/: .env
src/pokedex_frontend/: frontend.py
